Fixed overflow in container-other for RestaurantInfo output - Additionally, changed the map center to be South Kensington station and zoomed in further for the map to be more understandable
- Thatcher Ference <tbf20>

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -171,7 +171,7 @@ body {
   border-left: none;
   justify-content: space-around;
   background-color: white;
-  overflow: hidden;
+  overflow: auto;
 }
 
 /*#map-img, #searchresults {*/
